--- a/css/blog.css
+++ b/css/blog.css
@@ -182,3 +182,18 @@ h6, .h6 {
     background-color: black;
     color: white;
     border-color: black; }
+
+
+.btn-secondary {
+      outline-style: solid;
+      border: 1px solid black;
+      background-color: black;
+      width:10%;
+      padding: 10px;
+      color: white;
+      transition: background-color 0.5s;
+      cursor: pointer; }
+      .btn:hover, .btn-primary:hover {
+        background-color: white;
+        color: black;
+        border-color: black; }
