--- a/css/blog.css
+++ b/css/blog.css
@@ -188,8 +188,9 @@ h6, .h6 {
       outline-style: solid;
       border: 1px solid black;
       background-color: black;
-      width:10%;
+      width: 8rem;;
       padding: 10px;
+      margin:1rem;
       color: white;
       transition: background-color 0.5s;
       cursor: pointer; }
