--- a/css/blog.css
+++ b/css/blog.css
@@ -20,14 +20,45 @@ h6, .h6 {
   color: #404040;
 }
 
+a:link {
+    text-decoration: none;
+}
 
 /*
  * Override Bootstrap's default container.
  */
 
-@media (min-width: 1200px) {
+@media (min-width: 320px) and (max-width: 768px) {
   .container {
-    width: 970px;
+    width:95%;
+  }
+  .blog-title {
+  font-size: 5rem!important;
+  }
+
+
+a {
+    font-size: 2.8rem;
+  }
+
+h1 {
+    font-size: 3rem;
+  }
+
+.footer-text {
+    font-size: 1.8rem!important;
+  }
+
+.btn-default  {
+  font-size: 1rem;
+    width: 10rem!important;
+    font-weight: bold;
+  }
+
+
+
+  .blog-nav-item {
+    font-size: 1.6rem!important;
   }
 }
 
@@ -50,7 +81,7 @@ h6, .h6 {
   font-weight: 500;
   color: #000;
   text-transform: uppercase;
-  font-size: 1.8rem;
+  font-size: 2.3rem;
   cursor: pointer;
 }
 .blog-nav-item:hover,
@@ -164,37 +195,26 @@ h6, .h6 {
   text-align: center;
   background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-top: 5rem;
 }
 
-.btn-primary {
+.btn-default {
   outline: none;
   border: 1px solid black;
   background-color: white;
-  width:28%;
-  padding: 10px;
+  width:10rem;
+  padding: 1rem;
+  margin-left:  1rem;
   color: #404040;
+  font-weight: bold;
   transition: background-color 0.5s;
   cursor: pointer; }
-  .btn:hover, .btn-primary:hover {
+  .btn:hover, .btn:focus, .btn:active, .btn-primary:hover{
     background-color: black;
     color: white;
     border-color: black; }
-
-
-.btn-secondary {
-      outline-style: solid;
-      border: 1px solid black;
-      background-color: black;
-      width: 8rem;;
-      padding: 10px;
-      margin:1rem;
-      color: white;
-      transition: background-color 0.5s;
-      cursor: pointer; }
-      .btn:hover, .btn-primary:hover {
-        background-color: white;
-        color: black;
-        border-color: black; }
