--- a/css/blog.css
+++ b/css/blog.css
@@ -5,6 +5,7 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #404040;
+  background-color: #ffffff;
 }
 
 a,  .a,
@@ -30,21 +31,18 @@ ul {
 }
 
 
+
+
 /*
  * Override Bootstrap's default container.
  */
 
 @media (min-width: 320px) and (max-width: 768px) {
-  .container {
+  .container-fluid {
     width:95%;
   }
   .blog-title {
-  font-size: 5rem!important;
-  }
-
-
-a {
-    font-size: 2.8rem;
+  font-size: 4rem!important;
   }
 
 
@@ -53,7 +51,6 @@ h1 {
   }
 
 p .comment-text {
-
 }
 
 
@@ -236,121 +233,48 @@ p .comment-text {
     border-color: black; }
 
 
-    /* Full-width input fields */
-    input[type=text], input[type=password] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
+    .wrapper {
+    	margin-top: 80px;
+      margin-bottom: 80px;
     }
 
-    /* Set a style for all buttons */
-    button {
-        background-color: #4CAF50;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-    }
+    .form-signin {
+      max-width: 380px;
+      padding: 15px 35px 45px;
+      margin: 0 auto;
+      background-color: #fff;
+      border: 1px solid rgba(0,0,0,0.1);
+      }
+      .form-signin-heading,
+    	.checkbox {
+    	  margin-bottom: 30px;
+    	}
 
-    button:hover {
-        opacity: 0.8;
-    }
+    	.checkbox {
+    	  font-weight: normal;
+    	}
 
-    /* Extra styles for the cancel button */
-    .cancelbtn {
-        width: auto;
-        padding: 10px 18px;
-        background-color: #f44336;
-    }
+    	.form-control {
+    	  position: relative;
+    	  font-size: 16px;
+    	  height: auto;
+    	  padding: 10px;
+    		@include box-sizing(border-box);
 
-    /* Center the image and position the close button */
-    .imgcontainer {
-        text-align: center;
-        margin: 24px 0 12px 0;
-        position: relative;
-    }
+    		&:focus {
+    		  z-index: 2;
+    		}
+    	}
 
-    img.avatar {
-        width: 40%;
-        border-radius: 50%;
-    }
+    	input[type="text"] {
+        font-size: 20px;
+    	  margin-bottom: -1px;
+    	  border-bottom-left-radius: 0;
+    	  border-bottom-right-radius: 0;
+    	}
 
-    .container {
-        padding: 16px;
-    }
-
-    span.psw {
-        float: right;
-        padding-top: 16px;
-    }
-
-    /* The Modal (background) */
-    .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        padding-top: 60px;
-    }
-
-    /* Modal Content/Box */
-    .modal-content {
-        background-color: #fefefe;
-        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-        border: 1px solid #888;
-        width: 80%; /* Could be more or less, depending on screen size */
-    }
-
-    /* The Close Button (x) */
-    .close {
-        position: absolute;
-        right: 25px;
-        top: 0;
-        color: #000;
-        font-size: 35px;
-        font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-        color: red;
-        cursor: pointer;
-    }
-
-    /* Add Zoom Animation */
-    .animate {
-        -webkit-animation: animatezoom 0.6s;
-        animation: animatezoom 0.6s
-    }
-
-    @-webkit-keyframes animatezoom {
-        from {-webkit-transform: scale(0)}
-        to {-webkit-transform: scale(1)}
-    }
-
-    @keyframes animatezoom {
-        from {transform: scale(0)}
-        to {transform: scale(1)}
-    }
-
-    /* Change styles for span and cancel button on extra small screens */
-    @media screen and (max-width: 300px) {
-        span.psw {
-           display: block;
-           float: none;
-        }
-        .cancelbtn {
-           width: 100%;
-        }
-    }
+    	input[type="password"] {
+    	  margin-bottom: 20px;
+    	  border-top-left-radius: 0;
+    	  border-top-right-radius: 0;
+    	}
